<resources>
    <string name="app_name">FruitApplication2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_durian">Durian</string>
    <string name="menu_manggis">Manggis</string>
    <string name="menu_otaheite">Rose Apple</string>
    <string name="menu_cempedek">Cempedek</string>
    <string name="menu_langsat">Langsat</string>
    <string name="menu_rambutan">Rambutan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>