<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_duriantest2"
            android:title="@string/menu_durian" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_manggis"
            android:title="@string/menu_manggis" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_rambutan"
            android:title="@string/menu_rambutan" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_otaheite"
            android:title="@string/menu_otaheite" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_cempedek"
            android:title="@string/menu_cempedek" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_langsat"
            android:title="@string/menu_langsat" />
</menu>